# reengage-env

./: .gitignore  COMPLIANCE_PLAN.md  Dockerfile  README.md  app.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  server.py
demo/: app.py  scenarios.json
docs/: architecture.md  reward_design.md
evaluation/: evaluation_report.md  metrics.py  run_evaluation.py
reengage_env/: environment.py  graders.py
scripts/: baseline_inference.py
server/: app.py
tests/: test_environment.py
training/: config.yaml  rollout.py  train_grpo.py
verifier/: audit_logger.py  reward_verifier.py  safety_checks.py
