[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reengage-env"
version = "1.0.0"
description = "OpenEnv-compliant re-engagement RL environment"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "requests>=2.31.0",
    "openai>=1.30.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "httpx>=0.27.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["reengage_env*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[project.scripts]
server = "server:app"
